@@ -12,7 +12,7 @@
 <h1 class="title">Recent Changes for wxPython</h1>
 <div class="section" id="id1">
 <h1><a name="id1">2.5.1.4</a></h1>
-<p>(See also the MigrationGuide.txt file for details about some of the
+<p>(See also the <a class="reference" href="MigrationGuide.html">MigrationGuide</a> file for details about some of the
 big changes that have happened in this release and how you should
 adapt your code.)</p>
 <p>The wxWindows project and library is now known as wxWidgets.  Please
